--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "scripts": {
     "test": "mocha src/test/index.js -w",
     "test:no-watch": "istanbul cover -x *test.js _mocha --R spec src/test/index.js",
+    "check-coverage": "istanbul check-coverage --statements 80 --branches 80 --functions 80 --lines 80",
+    "report-coverage": "cat ./coverage/lcov.info | codecov",
     "semantic": "semantic-release-cli",
     "semantic-release": "semantic-release",
     "travis-deploy-once": "travis-deploy-once",
@@ -36,6 +38,7 @@
   "homepage": "https://github.com/hoangtranson/vue-filter#readme",
   "devDependencies": {
     "chai": "4.2.0",
+    "codecov.io": "0.1.6",
     "commitizen": "3.0.4",
     "cz-conventional-changelog": "2.1.0",
     "husky": "1.1.2",
