--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,7 @@ before_script:
 script:
   - npm run test:no-watch
 after_success:
+  - npm run report-coverage
   - npm run travis-deploy-once "npm run semantic-release" && npm publish
 branches:
   only:
