--- a/package.json
+++ b/package.json
@@ -7,11 +7,11 @@
     "test": "mocha src/test/index.js -w",
     "test:no-watch": "istanbul cover -x *test.js _mocha --R spec src/test/index.js",
     "check-coverage": "istanbul check-coverage --statements 80 --branches 80 --functions 80 --lines 80",
-    "report-coverage": "cat ./coverage/lcov.info && codecov",
+    "report-coverage": "cat ./coverage/lcov.info | codecov",
     "semantic": "semantic-release-cli",
     "semantic-release": "semantic-release",
     "travis-deploy-once": "travis-deploy-once",
-    "commit": "git add . && git-cz"
+    "commit": "git-cz"
   },
   "config": {
     "commitizen": {
