--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "simple-vue-filter",
-  "version": "0.0.0-development",
+  "version": "2.0.2",
   "description": "Set of filter for Vuejs",
   "main": "src/index.js",
   "scripts": {
@@ -8,8 +8,6 @@
     "test:no-watch": "istanbul cover -x *test.js _mocha --R spec src/test/index.js",
     "check-coverage": "istanbul check-coverage --statements 80 --branches 80 --functions 80 --lines 80",
     "report-coverage": "cat ./coverage/lcov.info | codecov",
-    "semantic": "semantic-release-cli",
-    "semantic-release": "semantic-release",
     "travis-deploy-once": "travis-deploy-once",
     "commit": "git-cz"
   },
@@ -39,8 +37,6 @@
     "husky": "1.1.2",
     "istanbul": "0.4.5",
     "mocha": "5.2.0",
-    "semantic-release": "^15.10.6",
-    "semantic-release-cli": "4.0.9",
     "travis-deploy-once": "^5.0.9"
   }
 }
