--- a/package.json
+++ b/package.json
@@ -37,6 +37,10 @@
     "husky": "1.1.2",
     "istanbul": "0.4.5",
     "mocha": "5.2.0",
-    "travis-deploy-once": "^5.0.9"
+    "travis-deploy-once": "^5.0.9",
+    "cryptiles": ">=4.1.2",
+    "hawk": ">=3.1.3",
+    "mime": ">=1.4.1",
+    "hoek": ">=4.2.1"
   }
 }
